@@ -5,12 +5,8 @@
     <artifactId>mchat</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <java.version>15</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-
         <!-- Dependency Versions -->
+        <java.version>15</java.version>
         <javafx.version>15.0.1</javafx.version>
         <tinylog.version>2.2.0</tinylog.version>
         <slf4j.version>1.7.30</slf4j.version>
@@ -18,6 +14,10 @@
         <archunit.version>0.14.1</archunit.version>
         <phaoclient.version>1.2.5</phaoclient.version>
         <apachecommons.version>3.11</apachecommons.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <!-- SonarCloud properties -->
         <sonar.projectKey>alehel_mchat</sonar.projectKey>
@@ -103,14 +103,6 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.tngtech.archunit/archunit-junit5 -->
-        <dependency>
-            <groupId>com.tngtech.archunit</groupId>
-            <artifactId>archunit-junit5</artifactId>
-            <version>${archunit.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -126,6 +118,14 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
